# zombie_simulator

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/components/: acceleration.rs  alive.rs  color.rs  draw_vision_range.rs  dying.rs  human.rs  location.rs  mod.rs  speed.rs  velocity.rs  vision_range.rs  zombie.rs
src/data_structures/: vector2.rs
src/resources/: arena_size.rs  background_color.rs  clicked_location.rs  dying_color.rs  dying_time.rs  entity_size.rs  mesh.rs  mod.rs  target_fps.rs  zombie_color.rs  zombie_speed.rs  zombie_vision_range.rs
src/systems/: add_zombie.rs  attack.rs  contain_entities_in_arena.rs  draw_entities.rs  human_repulsion.rs  mod.rs  randomly_walk.rs  reset_acceleration.rs  run_away_from_zombies.rs  turn_into_zombie.rs  update_dying.rs  update_location.rs  update_velocity.rs  visualize_vision_range.rs  zombie_attraction.rs
