[package]
name = "zombie_simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbecs = { path = "../bbecs" }
strum = "0.21.0"
strum_macros = "0.21.1"
ggez = "0.5.1"
eyre = "0.6.5"
rand = "0.8.4"